added a new paragraph and an image.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<p>DUNCAN MOTE</p>
+<!DOCTYPE html>
+<html>
+    <link rel="stylesheet" href="styles.css">  
+    <head>
+        <title>Strife, Theocracy, and War</title>
+        <h1 id = mainheader>Strife, Theocracy, and War</h1>
+    </head>
+    <header>An examination of the fall of the Galactic Republic</header>
+    <body>
+        <p id = paragraphone>
+            The Galactic Republic spanned thousands of worlds for a time period greater than any civilization on Earth. Why would such a grand and expansive civilization fall, you may ask? On this page I will explore the many competing factions, areas of lax governmental control, and failures of this galaxy-spanning republic.
+        </p>
+    <div id=republiclogo>
+        <img src="../html-me-something/imgs/galacticrepublic.png" alt="The symbol of the Galactic Republic">
+    </div>
+    </body>
+    
+</html>
