--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     </head>
     <header>An examination of the fall of the Galactic Republic</header>
     <body>
-        <p id = paragraphone>
+        <p>
             The Galactic Republic spanned thousands of worlds for a time period greater than any civilization on Earth. Why would such a grand and expansive civilization fall, you may ask? On this page I will explore the many competing factions, areas of lax governmental control, and failures of this galaxy-spanning republic.
         </p>
-    <div id=republiclogo>
-        <img src="../html-me-something/imgs/galacticrepublic.png" alt="The symbol of the Galactic Republic">
-    </div>
+        <div align = "right">
+            <img id=republiclogo src="../html-me-something/imgs/galacticrepublic.png" alt="The symbol of the Galactic Republic">
+        </div>
+        <p>
+            The Galactic Republic is actually significantly older than the Galactic Republic that existed after the Battle of Coruscant. While the Jedi Archives date the 
+        </p>
+        
     </body>
-    
+    <footer>Duncan Mote 08/2020 <a href = "mailto:dkmdkm2012@gmail.com">dkmdkm2012@gmail.com</a></footer>
 </html>
