added more to the paragraph and changed the image link to the actual svg link

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
             The Galactic Republic spanned thousands of worlds for a time period greater than any civilization on Earth. Why would such a grand and expansive civilization fall, you may ask? On this page I will explore the many competing factions, areas of lax governmental control, and failures of this galaxy-spanning republic.
         </p>
         <div align = "right">
-            <img id=republiclogo src="../html-me-something/imgs/galacticrepublic.png" alt="The symbol of the Galactic Republic">
+            <img id=republiclogo src="https://vignette.wikia.nocookie.net/starwars/images/d/de/Republic_Emblem.svg/revision/latest?cb=20080311202148" alt="The symbol of the Galactic Republic">
         </div>
-        <p>
-            The Galactic Republic is actually significantly older than the Galactic Republic that existed after the Battle of Coruscant. While the Jedi Archives date the 
-        </p>
+        <article>
+            The Galactic Republic is actually significantly older than the Galactic Republic that existed after the Battle of Coruscant. While the Jedi Archives date the Galactic Republic approximately 1000 years Before the Battle of Yavin (BBY), there was a .&NewLine;
+        </article>
         
     </body>
-    <footer>Duncan Mote 08/2020 <a href = "mailto:dkmdkm2012@gmail.com">dkmdkm2012@gmail.com</a></footer>
+    <footer>&#174; Duncan Mote 08/2020 <a href = "mailto:dkmdkm2012@gmail.com">dkmdkm2012@gmail.com</a></footer>
 </html>
