made a few changes to HTML

--- a/index.html
+++ b/index.html
@@ -1,22 +1,57 @@
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" href="styles.css">  
+  <link rel="stylesheet" href="styles.css" />
+  <header>
+    &#174; Duncan Mote 08/2020
+    <a href="mailto:dkmdkm2012@gmail.com">dkmdkm2012@gmail.com</a>
+  </header>
+  <main>
     <head>
-        <title>Strife, Theocracy, and War</title>
-        <h1 id = mainheader>Strife, Theocracy, and War</h1>
+      <title>Strife, Theocracy, and War</title>
+      <h1 id="mainheader">Strife, Theocracy, and War</h1>
     </head>
-    <header>An examination of the fall of the Galactic Republic</header>
     <body>
+      <article>
         <p>
-            The Galactic Republic spanned thousands of worlds for a time period greater than any civilization on Earth. Why would such a grand and expansive civilization fall, you may ask? On this page I will explore the many competing factions, areas of lax governmental control, and failures of this galaxy-spanning republic.
+          The Galactic Republic spanned thousands of worlds for a time period
+          greater than any civilization on Earth. Why would such a grand and
+          expansive civilization fall, you may ask? On this page I will explore
+          the many competing factions, areas of lax governmental control, and
+          failures of this galaxy-spanning republic.
         </p>
-        <div align = "right">
-            <img id=republiclogo src="https://vignette.wikia.nocookie.net/starwars/images/d/de/Republic_Emblem.svg/revision/latest?cb=20080311202148" alt="The symbol of the Galactic Republic">
+        <div align="right">
+          <img
+            id="republiclogo"
+            src="../html-me-something/imgs/galacticrepublic.png"
+            alt="The symbol of the Galactic Republic"
+          />
         </div>
-        <article>
-            The Galactic Republic is actually significantly older than the Galactic Republic that existed after the Battle of Coruscant. While the Jedi Archives date the Galactic Republic approximately 1000 years Before the Battle of Yavin (BBY), there was a .&NewLine;
-        </article>
-        
+        <p>
+          The Galactic Republic is actually significantly older than the
+          Galactic Republic that existed after the Battle of Coruscant. While
+          the Jedi Archives date the Galactic Republic &#126;1000 years Before
+          the Battle of Yavin (BBY), there was a time prior to the existence of
+          the galactic senate.
+        </p>
+        <p>
+          This Galactic Empire was a different theocracy than the one existing
+          under Jedi rule, but was effectively the same. It punished those who
+          did not abide by the laws set force by the theocracy, and vilified
+          those who disagreed with their methods. This constant internal turmoil
+          broke the republic through years of power changing hands.
+        </p>
+        <p>
+          Unfortunately, the records destroyed in the Battle of Coruscant have
+          left us with little information about the so-called "High Republic",
+          but we can be sure that it was significantly more developed and less
+          striated than the Republic we all know and love.
+        </p>
+      </article>
     </body>
-    <footer>&#174; Duncan Mote 08/2020 <a href = "mailto:dkmdkm2012@gmail.com">dkmdkm2012@gmail.com</a></footer>
+  </main>
+  <button id=scrollbutton>Scroll this article</button>
+  <footer>
+    &#174; Duncan Mote 08/2020
+    <a href="mailto:dkmdkm2012@gmail.com">dkmdkm2012@gmail.com</a>
+  </footer>
 </html>
