finished assignment. I could write more but I thought I should just submit what I have so I can start on assignment 6

--- a/index.html
+++ b/index.html
@@ -34,19 +34,22 @@
           seems very lackluster. The graphical fidelity is mediocre at best, the RPG elements are watered 
           down significantly from previous installments in the Elder Scrolls series, and there are 
           many aspects of the story that are nonsensical or simply lack the expert crafting with which 
-          some other RPGs have been created, but I digress. The sandbox nature of the
+          some other RPGs have been created, but I digress. The sandbox nature of the game lead me down other paths in gaming
+          some of which... others consider unnatural. This fondness of freeform gameplay and RPG elements lead me to the following
+          list of the absolute best games of all time (according to me).
         </p>
-        <div><img id="cataclysm" src="https://i.ytimg.com/vi/k8cVzEYFfg4/maxresdefault.jpg"></img></div>
-        <p>
-          Unfortunately, the records destroyed in the Battle of Coruscant have
-          left us with little information about the so-called "High Republic",
-          but we can be sure that it was significantly more developed and less
-          striated than the Republic we all know and love.
-        </p>
+        <ol>
+          <li>Cataclysm: Dark Days Ahead</li>
+          <img id="cataclysm" src="https://i.ytimg.com/vi/k8cVzEYFfg4/maxresdefault.jpg"></img>
+          <div style="font-size: x-small;color: darkolivegreen; margin-right: 10px;padding-bottom: 7%;">Cataclysm is a  rogue-like that is surpassed by very few in complexity and scope. You play as a survivor of an apocalypse of unknown origin and travel through the vast open country of New England, killing zeds, robots, ethereal creatures, and more. You occupy your time trying to break into government research facilities, mutating yourself and installing cybernetics to become an all-powerful god thing. Crush your enemies in custom-built death mobiles and set off nukes at your leisure. The world is yours to pillage and destroy as you see fit.</div>
+          <li>The Elder Scrolls III: Morrowind</li>
+          <img id = morrowind src="http://1.bp.blogspot.com/-I23YW0PXfks/TtRAsKkGMCI/AAAAAAAABGs/nazM_vAPbtA/s1600/Morrowind2010-03-1820-18-53-87.jpg"></img>
+          <div style="font-size: x-small;color: darkolivegreen; margin-right: 10px; padding-bottom: 6%;">Morrowind may be a commonly heard name to some, while others may only recognize it by the name Elder Scrolls. It was possibly the first RPG that was accessible to the average person. I personally began playing Morrowind when I was around 11 or 12, and even now I revisit the game and play through the main quest line every few years. It is a true sandbox and you are free to kill any character, even the gods, although they can take quite a beating.
+          <li></li>
+        </ol>
       </article>
     </body>
   </main>
-  <button id=scrollbutton>Scroll this article</button>
   <footer>
     &#174; Duncan Mote 08/2020
     <a href="mailto:dkmdkm2012@gmail.com">dkmdkm2012@gmail.com</a>
